--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -22,35 +22,35 @@
 
     const clues = {
       Across: [
-        {number: "1", text: "They come after mis", labelColumn: 1, highlightColumn: `3/7`},
+        {number: "1", text: "They come after Mis", labelColumn: 1, highlightColumn: `3/7`},
         {number: "4", text: "Mammal with a proboscis", labelColumn: 5, highlightColumn: `6/14`, highlightRow: 2},
         {number: "9", text: "Fault", labelColumn: 11, hightlightColumn: `3/7`, highlightRow: 3},
         {number: "14", text: "First responder", labelColumn: 1, labelRow: 2, highlightColumn: `1/7`, highlightRow: 4},
         {number: "15", text: "A sweet cake", labelColumn: 5, labelRow: 2, highlightColumn: `8/14`, highlightRow: 4},
         {number: "16", text: "Bother", labelColumn: 11, labelRow: 2, highlightColumn: `3/6`, highlightRow: 5},
-        {number: "17", text: "Person in charge of a 2 p.m. rager?", labelColumn: 1, labelRow: 3, highlightColumn: `9/14`, highlightRow: 5},
+        {number: "17", text: "*Person in charge of a 2 p.m. rager?", labelColumn: 1, labelRow: 3, highlightColumn: `9/14`, highlightRow: 5},
         {number: "19", text: "Scoundrel", labelColumn: 11, labelRow: 3, highlightColumn: `1/5`, highlightColumn: 6},
         {number: "20", text: "State that's home to Arches National Park", labelColumn: 1, labelRow: 4, highlightColumn: `6/11`, highlightRow: 6},
         {number: "21", text: "Olive genus", labelColumn: 7, labelRow: 4, highlightColumn: `5/10`, highlightRow: 7},
-        {number: "23", text: "Like a large, children's book series dog", labelColumn: 13, labelRow: 4, highlightColumn: `4/9`, highlightRow: 8},
-        {number: "24", text: "A daydream about a Johnson & Johnson product?", labelColumn: 1, labelRow: 5, highlightColumn: `10/14`, highlightRow: 8},
-        {number: "29", text: "Federal org. headed by Rick Perry", labelColumn: 5, labelRow: 6, highlightRow: `1/6`, highlightRow: 9},
+        {number: "23", text: "Like a large children's book series dog", labelColumn: 13, labelRow: 4, highlightColumn: `4/9`, highlightRow: 8},
+        {number: "24", text: "*A daydream about a Johnson & Johnson product?", labelColumn: 1, labelRow: 5, highlightColumn: `10/14`, highlightRow: 8},
+        {number: "29", text: "Rick Perry’s agcy.", labelColumn: 5, labelRow: 6, highlightRow: `1/6`, highlightRow: 9},
         {number: "30", text: "Loudness measure", labelColumn: 9, labelRow: 6, highlightColumn: `9/12`, highlightRow: 9},
-        /* 33?? */
+        /* 33?? */{number: "33", text: "Disney city in Fla.", labelColumn: 1, labelRow: 2},
         {number: "36", text: "Recommended cost of a product", labelColumn: 5, labelRow: 7, highlightColumn: `1/7`, highlightRow: 10},
         {number: "38", text: `"Don't Cry for Me, Argentina" musical`, labelColumn: 11, labelRow: 7, highlightColumn: `8/14`, highlightRow: 10},
-        {number: "39", text: "A game show for couples?", labelColumn: 1, labelRow: 8, highlightColumn: `8/12`, highlightRow: 11},
-        {number: "43", text: "Me too, to Pierre", labelColumn: 1, labelRow: 9, highlightColumn: `1/9`, highlightRow: 12},
-        {number: "44", text: "Online liberals?", labelColumn: 8, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "39", text: "*A game show for couples?", labelColumn: 1, labelRow: 8, highlightColumn: `8/12`, highlightRow: 11},
+        {number: "43", text: "Me, too, to Pierre", labelColumn: 1, labelRow: 9, highlightColumn: `1/9`, highlightRow: 12},
+        {number: "44", text: "Liberals online?", labelColumn: 8, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
         {number: "45", text: "Handheld Nintendo consoles", labelColumn: 13, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
         {number: "46", text: "They bend over backwards to descend steps", labelColumn: 1, labelRow: 10, highlightColumn: `8/14`, highlightRow: 13},
         {number: "49", text: "Phoenician name for Tripoli", labelColumn: 9, labelRow: 10, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "50", text: "Scientist Bill's approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "50", text: "*Scientist Bill’s approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
         {number: "56", text: "Spelling ___", labelColumn: 1, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "58", text: "Scowl", labelColumn: 6, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "59", text: '2000 movie "O Brother, Where Art ___"', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "59", text: '2000 movie "O Brother, Where Art ___?"', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "60", text: "Black cats, for example", labelColumn: 1, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "63", text: "Texas Tech, Virginia, Auburn and Michigan State... or a hint to the words in circled letters", labelColumn: 7, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "63", text: "Texas Tech, Virginia, Auburn and Michigan State this year … or the ends of the answers to the starred clues", labelColumn: 7, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
         {number: "66", text: "Like much of Iowa", labelColumn: 1, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
         {number: "67", text: "Body of water between cliffs", labelColumn: 7, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
         {number: "68", text: "Ivy League for future D.A.s", labelColumn: 13, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
@@ -60,19 +60,19 @@
       ],
       Down: [
         {number: '1', text: "Done (with)"},
-        {number: "2", text: "Latin for beloved", labelColumn: 2},
+        {number: "2", text: "One-time Pittsburgh mob boss", labelColumn: 2},
         {number: "3", text: "The last ____", labelColumn: 3},
-        {number: "4", text: 'It comes before "L" in a text signoff'},
+        {number: "4", text: 'Letters before “L” in a text signoff'},
         {number: "5", text: "End-of-meeting Q", labelColumn: 6},
         {number: "6", text: "Like The Pitt News copy editors", labelColumn: 7},
-        {number: "7", text: `"What's the largest city in Calif. again?"`, labelColumn: 8},
+        {number: "7", text: `"What’s the largest city in Calif. again?"`, labelColumn: 8},
         {number: "8", text: "Mail again", labelColumn: 9},
         {number: "9", text: "You can set a high one", labelColumn: 11},
         {number: "10", text: "Mil. liaison", labelColumn: 12},
-        {number: "11", text: "Green pig nemesis?", labelColumn: 13},
+        {number: "11", text: "Green pig’s nemesis?", labelColumn: 13},
         {number: "12", text: "Pouting expression", labelColumn: 14},
         {number: "13", text: "Word that follows bright or cross", labelColumn: 15},
-        {number: "18", text: "Meas. of noise in a soundwave", labelColumn: 4, labelRow: 3},
+        {number: "18", text: "Meas. of noise reproduction quality", labelColumn: 4, labelRow: 3},
         {number: "22", text: "Consumed", labelColumn: 10, labelRow: 4},
         {number: "25", text: "Similar to a party music genre", labelColumn: 5, labelRow: 5},
         {number: "26", text: "Valentine's Day flower", labelColumn: 6, labelRow: 5},
@@ -81,23 +81,23 @@
         {number: "31", text: "Figs. on airport announcement screens", labelColumn: 14, labelRow: 6},
         {number: "32", text: "Potato chip brand", labelColumn: 15, labelRow: 6},
         {number: "33", text: "Plural of 71-across", labelColumn: 1, labelRow: 7},
-        {number: "34", text: "Ex-con's status", labelColumn: 2, labelRow: 7},
+        {number: "34", text: "Ex-con’s status", labelColumn: 2, labelRow: 7},
         {number: "35", text: '"Cleopatra" band', labelColumn: 3, labelRow: 7},
         {number: "37", text: "Cozy nighttime clothing items", labelColumn: 8, labelRow: 7},
         {number: "40", text: "Like thin hands", labelColumn: 4, labelRow: 8},
         {number: "41", text: "Reporters for online publications?", labelColumn: 9, labelRow: 8},
-        {number: "42", text: 'Actor Wilson that "wows" audience', labelColumn: 10, labelRow: 8},
+        {number: "42", text: 'Actor Wilson that "Wow"s audiences', labelColumn: 10, labelRow: 8},
         {number: "47", text: "Fr. fashion house", labelColumn: 6, labelRow: 10},
         {number: "48", text: "Laughs (at)", labelColumn: 7, labelRow: 10},
         {number: "51", text: "Spooky board", labelColumn: 8, labelRow: 11},
-        {number: "52", text: "Tinder question?", labelColumn: 12, labelRow: 11},
+        {number: "52", text: "Bad Tinder opener", labelColumn: 12, labelRow: 11},
         {number: "53", text: '"What have we here?"', labelColumn: 13, labelRow: 11},
         {number: "54", text: "Could, should counterpart", labelColumn: 14, labelRow: 11},
         {number: "55", text: "Medical professional", labelColumn: 15, labelRow: 11},
-        {number: "56", text: "Be tedious", labelColumn: 1, labelRow: 12},
+        {number: "56", text: "Tedious person", labelColumn: 1, labelRow: 12},
         {number: "57", text: "Ostrich relatives", labelColumn: 2, labelRow: 12},
         {number: "61", text: "Oldest aviation club in the U.S.", labelColumn: 4, labelRow: 13},
-        {number: "62", text: "Coy", labelColumn: 5, labelRow: 13},
+        {number: "62", text: "Foxlike", labelColumn: 5, labelRow: 13},
         {number: "64", text: "Ess preceders", labelColumn: 10, labelRow: 13},
         {number: "65", text: "Opposite of BDE?", labelColumn: 11, labelRow: 13}
       ]
