Update 33 across clue

--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -36,7 +36,7 @@
         {number: "24", text: "*A daydream about a Johnson & Johnson product?", labelColumn: 1, labelRow: 5, highlightColumn: `10/14`, highlightRow: 8},
         {number: "29", text: "Rick Perry’s agcy.", labelColumn: 5, labelRow: 6, highlightRow: `1/6`, highlightRow: 9},
         {number: "30", text: "Loudness measure", labelColumn: 9, labelRow: 6, highlightColumn: `9/12`, highlightRow: 9},
-        /* 33?? */{number: "33", text: "Disney city in Fla.", labelColumn: 1, labelRow: 2},
+        {number: "33", text: "Disney city in Fla.", labelRow: 7},
         {number: "36", text: "Recommended cost of a product", labelColumn: 5, labelRow: 7, highlightColumn: `1/7`, highlightRow: 10},
         {number: "38", text: `"Don't Cry for Me, Argentina" musical`, labelColumn: 11, labelRow: 7, highlightColumn: `8/14`, highlightRow: 10},
         {number: "39", text: "*A game show for couples?", labelColumn: 1, labelRow: 8, highlightColumn: `8/12`, highlightRow: 11},
