--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -34,7 +34,7 @@
         {number: "21", text: "Olive genus", labelColumn: 7, labelRow: 4, highlightColumn: `5/10`, highlightRow: 7},
         {number: "23", text: "Like a large children's book series dog", labelColumn: 13, labelRow: 4, highlightColumn: `4/9`, highlightRow: 8},
         {number: "24", text: "*A daydream about a Johnson & Johnson product?", labelColumn: 1, labelRow: 5, highlightColumn: `10/14`, highlightRow: 8},
-        {number: "29", text: "Rick Perry’s agcy.", labelColumn: 5, labelRow: 6, highlightRow: `1/6`, highlightRow: 9},
+        {number: "29", text: "Rick Perry's agcy.", labelColumn: 5, labelRow: 6, highlightRow: `1/6`, highlightRow: 9},
         {number: "30", text: "Loudness measure", labelColumn: 9, labelRow: 6, highlightColumn: `9/12`, highlightRow: 9},
         {number: "33", text: "Disney city in Fla.", labelRow: 7},
         {number: "36", text: "Recommended cost of a product", labelColumn: 5, labelRow: 7, highlightColumn: `1/7`, highlightRow: 10},
@@ -45,7 +45,7 @@
         {number: "45", text: "Handheld Nintendo consoles", labelColumn: 13, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
         {number: "46", text: "They bend over backwards to descend steps", labelColumn: 1, labelRow: 10, highlightColumn: `8/14`, highlightRow: 13},
         {number: "49", text: "Phoenician name for Tripoli", labelColumn: 9, labelRow: 10, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "50", text: "*Scientist Bill’s approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "50", text: "*Scientist Bill's approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
         {number: "56", text: "Spelling ___", labelColumn: 1, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "58", text: "Scowl", labelColumn: 6, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "59", text: '2000 movie "O Brother, Where Art ___?"', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
@@ -62,14 +62,14 @@
         {number: '1', text: "Done (with)"},
         {number: "2", text: "One-time Pittsburgh mob boss", labelColumn: 2},
         {number: "3", text: "The last ____", labelColumn: 3},
-        {number: "4", text: 'Letters before “L” in a text signoff'},
+        {number: "4", text: 'Letters before "L" in a text signoff'},
         {number: "5", text: "End-of-meeting Q", labelColumn: 6},
         {number: "6", text: "Like The Pitt News copy editors", labelColumn: 7},
-        {number: "7", text: `"What’s the largest city in Calif. again?"`, labelColumn: 8},
+        {number: "7", text: `"What's the largest city in Calif. again?"`, labelColumn: 8},
         {number: "8", text: "Mail again", labelColumn: 9},
         {number: "9", text: "You can set a high one", labelColumn: 11},
         {number: "10", text: "Mil. liaison", labelColumn: 12},
-        {number: "11", text: "Green pig’s nemesis?", labelColumn: 13},
+        {number: "11", text: "Green pig's nemesis?", labelColumn: 13},
         {number: "12", text: "Pouting expression", labelColumn: 14},
         {number: "13", text: "Word that follows bright or cross", labelColumn: 15},
         {number: "18", text: "Meas. of noise reproduction quality", labelColumn: 4, labelRow: 3},
@@ -81,7 +81,7 @@
         {number: "31", text: "Figs. on airport announcement screens", labelColumn: 14, labelRow: 6},
         {number: "32", text: "Potato chip brand", labelColumn: 15, labelRow: 6},
         {number: "33", text: "Plural of 71-across", labelColumn: 1, labelRow: 7},
-        {number: "34", text: "Ex-con’s status", labelColumn: 2, labelRow: 7},
+        {number: "34", text: "Ex-con's status", labelColumn: 2, labelRow: 7},
         {number: "35", text: '"Cleopatra" band', labelColumn: 3, labelRow: 7},
         {number: "37", text: "Cozy nighttime clothing items", labelColumn: 8, labelRow: 7},
         {number: "40", text: "Like thin hands", labelColumn: 4, labelRow: 8},
