--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -50,7 +50,7 @@
         {number: "58", text: "Scowl", labelColumn: 6, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "59", text: '2000 movie "O Brother, Where Art ___?"', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "60", text: "Black cats, for example", labelColumn: 1, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "63", text: "Texas Tech, Virginia, Auburn and Michigan State this year … or the ends of the answers to the starred clues", labelColumn: 7, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "63", text: "Texas Tech, Virginia, Auburn and Michigan State this year ... or the ends of the answers to the starred clues", labelColumn: 7, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
         {number: "66", text: "Like much of Iowa", labelColumn: 1, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
         {number: "67", text: "Body of water between cliffs", labelColumn: 7, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
         {number: "68", text: "Ivy League for future D.A.s", labelColumn: 13, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
