--- a/mental-health/therapy.html
+++ b/mental-health/therapy.html
@@ -182,7 +182,7 @@
       <div class="container">
         <div class="row">
           <div class="col s12 m11">
-            <p><span style="font-weight: 400;">Gabby Ritterson, 19, from Old Bridge, New Jersey, attended group therapy for two years due to ongoing experiences with mental illness. </span></p>
+            <p><span style="font-weight: 400;"><span class="dropcap">G</span>abby Ritterson, 19, from Old Bridge, New Jersey, attended group therapy for two years due to ongoing experiences with mental illness. </span></p>
             <p><span style="font-weight: 400;">Grace McAfee, 19, from the North Hills of Pittsburgh, attended several group therapy sessions with her immediate family in an attempt to sort out issues among themselves. </span></p>
             <p><span style="font-weight: 400;">Keith Paylo, Point Park University’s Dean of Students, describes the university counseling center’s group therapy programs as more of an offer to students, rather than a push towards a new counseling method, citing the effectiveness of the group model in situations both on and off college campuses.</span></p>
             <p><span style="font-weight: 400;">Group therapy is also often used to treat serious addictions. In fact, as of 2017, the Alcoholics Anonymous organization, a popular provider of group therapy for individuals battling addiction, estimated that approximately 2.1 million people actively utilize their services.</span></p>
