Update PPG headline on home page

--- a/mental-health/index.html
+++ b/mental-health/index.html
@@ -14,7 +14,7 @@
       gtag('config', 'UA-66952241-1');
     </script>
 
-    <title>Mental Health: TKTK</title>
+    <title>Seeking Counsel on Campus</title>
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
 
     <style>
@@ -210,7 +210,7 @@
             </span></h5>
 
             <h5><span style="font-weight: 400;">
-              Read: <a href="therapy.html">Therapy Headline!</a>
+              Read: <a href="therapy.html">The Growth of Group Therapy</a>
             </span></h5>
           </div>
         </div>
