--- a/mental-health/index.html
+++ b/mental-health/index.html
@@ -198,11 +198,11 @@
         <div class="row">
           <div class="col s12 m11">
             <p><span style="font-weight: 400;">
-              <span class="dropcap">T</span>oday’s college students are facing a mental health crisis — nearly 1 in 5 deal anxiety or depression. This also means that more and more students are utilizing the mental health services provided by their universities. But counseling centers are struggling to figure out how to fairly and adequately address the influx of individuals who come seeking help every semester, leaving some students feeling frustrated and uncertain.
+              <span class="dropcap">T</span>oday's college students are facing a mental health crisis - nearly 1 in 5 deal anxiety or depression. This also means that more and more students are utilizing the mental health services provided by their universities. But counseling centers are struggling to figure out how to fairly and adequately address the influx of individuals who come seeking help every semester, leaving some students feeling frustrated and uncertain.
             </span></p>
 
             <p><span style="font-weight: 400;">
-              The Pitt News and The Point Park Globe teamed up in a collaboration through the Center for Media Innovation’s Bridge Pittsburgh project to present this joint project on university mental health resources, which includes a look at the practice of group therapy at universities and the voices of students who have turned to college resources to meet their mental health needs.
+              The Pitt News and The Point Park Globe teamed up in a collaboration through the Center for Media Innovation's Bridge Pittsburgh project to present this joint project on university mental health resources, which includes a look at the practice of group therapy at universities and the voices of students who have turned to college resources to meet their mental health needs.
             </span></p>
 
             <h5><span style="font-weight: 400;">
