--- a/mental-health/index.html
+++ b/mental-health/index.html
@@ -186,7 +186,7 @@
           Written by <a style='color: inherit; text-decoration: underline;' href='https://pittnews.com/staff/?writer=Janine Faust'>Janine Faust</a>, Editor-in-Chief of The Pitt News
         </span><br/>
         <span id="author-info">
-          and <a style='color: inherit; text-decoration: underline;' href='https://pittnews.com/staff/?writer=Janine Faust'>Carley Donk</a>, Editor-in-Chief of The Point Park Globe
+          and <a style='color: inherit; text-decoration: underline;' href='https://ppuglobe.com/staff-profiles/?writer=Carley Bonk'>Carley Bonk</a>, Editor-in-Chief of The Point Park Globe
         </span>
         <br/>
         <span id="date-info">June 14, 2019</span>
