--- a/mental-health/therapy.html
+++ b/mental-health/therapy.html
@@ -181,7 +181,7 @@
         <div style="text-align: justify;">
           <span id="author-info">
             Written by <a style='color: inherit; text-decoration: underline;' href='https://ppuglobe.com/staff-profiles/?writer=Andrew%20Brinker'>Andrew Brinker</a> and
-            <a style='color: inherit; text-decoration: underline;' href='https://ppuglobe.com/staff-profiles/?writer=Jordyn%20Hronec'>Jordan Hronec</a>, News Editors at The Point Park Globe
+            <a style='color: inherit; text-decoration: underline;' href='https://ppuglobe.com/staff-profiles/?writer=Jordyn%20Hronec'>Jordyn Hronec</a>, News Editors at The Point Park Globe
           </span><br/>
           <span id="author-info">Illustrations by Eli Savage, Staff Illustrator at The Pitt News</span><br/>
           <span id="date-info">June 14, 2019</span><br/>
